monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-ingress
  namespace: monitoring
spec:
  rules:
  - host: grafana.k3.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-stack-grafana	
            port: 
              number: 80
  - host: prom.k3.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: 	prometheus-stack-kube-prom-prometheus
            port: 
              number: 9090
